<resources>
    <string name="app_name">Orbis</string>
    <string name="action_settings">Settings</string>
    <string name="bild_von_erde">Bild von Erde</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="coins">Coins</string>
    <string name="aufgabenbild">Aufgabenbild</string>
    <string name="profil">Profil</string>
    <string name="punkte">Punkte:</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="ton">Ton</string>
    <string name="home">Home</string>
    <string name="aufgabenbeschreibung">Aufgabenbeschreibung</string>
    <string name="welten">Welten</string>
    <string name="done">Done</string>
    <string name="geschafft">Geschafft</string>
    <string name="namen_ndern">Namen ändern</string>
</resources>
