<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    tools:context=".PlayActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_play">

    <TextView
        android:id="@+id/textView_aufgabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/aufgabenbeschreibung"
        android:text="aufgabe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <ImageView
        android:id="@+id/imageView_aufgabenbild"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_aufgabe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[3]"
        android:contentDescription="@string/aufgabenbild" />

    <ImageView
        android:id="@+id/imageView_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/back"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_keyboard_backspace_24px"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView_coins"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/coins"
        android:padding="8dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/textView_score"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comic_coin_edited" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="583"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_coins" />

    <ImageView
        android:id="@+id/imageView_home"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_back"
        app:layout_constraintStart_toEndOf="@+id/imageView_back"
        app:layout_constraintTop_toTopOf="@+id/imageView_back"
        app:srcCompat="@drawable/ic_round_home_24px"
        android:contentDescription="@string/home"
        tools:ignore="VectorDrawableCompat" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_back"
        app:layout_constraintStart_toStartOf="@+id/imageView_home"
        app:layout_constraintTop_toTopOf="@+id/imageView_back" />

</androidx.constraintlayout.widget.ConstraintLayout>