<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageView_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/back"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_keyboard_backspace_24px"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView_coins"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/coins"
        android:padding="8dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/textView_score"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comic_coin_edited" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="583"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_coins" />

    <ImageView
        android:id="@+id/imageView_home"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_back"
        app:layout_constraintStart_toEndOf="@+id/imageView_back"
        app:layout_constraintTop_toTopOf="@+id/imageView_back"
        app:srcCompat="@drawable/ic_round_home_24px"
        android:contentDescription="@string/home"
        tools:ignore="VectorDrawableCompat" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_back"
        app:layout_constraintStart_toStartOf="@+id/imageView_home"
        app:layout_constraintTop_toTopOf="@+id/imageView_back" />

    <TextView
        android:id="@+id/textView_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="Levelnummer"
        android:fontFamily="sans-serif-thin"
        android:text="Level 12"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_home" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_level"
        app:srcCompat="@drawable/tree_clipart_low_resolution" />

    <TextView
        android:id="@+id/textView_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="120dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>